fix for new projects names

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "presentation-site",
+    "name": "visualization-project",
     "version": "0.1.0",
     "private": true,
     "scripts": {
